webapp-color/k8s/deployment-darkblue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-darkblue
  labels:
    app: webapp
    color: darkblue
    type: deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: webapp
      color: darkblue
      type: deployment
  template:
    metadata:
      labels:
        app: webapp
        color: darkblue
        type: deployment
    spec:
      containers:
      - name: webapp
        image: akslab88lu9i.azurecr.io/webapp-color:1.0
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
      terminationGracePeriodSeconds: 5
