webapp-color/k8s/deployment-red.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-red
  labels:
    app: webapp
    color: red
    type: deployment
spec:
  replicas: 3  # Puoi modificare questo valore per il numero di repliche desiderato
  selector:
    matchLabels:
      app: webapp
      color: red
      type: deployment
  template:
    metadata:
      labels:
        app: webapp
        color: red
        type: deployment
    spec:
      containers:
      - name: webapp
        image: akslab88lu9i.azurecr.io/webapp-color:20250127_185036
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
      terminationGracePeriodSeconds: 5
