webapp-color/k8s/pod-out.yaml
apiVersion: v1
kind: Pod
metadata:
  name: outbound
  labels:
    app: outbound
spec:
  containers:
  - image: curlimages/curl
    name: webapp
    command:
    - sleep
    - infinity
