webapp-color/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  containers:
  - image: akslab88lu9i.azurecr.io/webapp-color:20250127_175424
    name: webapp
    ports:
    - name: web
      containerPort: 8080
      protocol: TCP
  terminationGracePeriodSeconds: 5
